# PromptManager

./: .gitignore  LICENSE  README.md  SUMMARY.md  pyproject.toml
examples/: advanced_usage.py  basic_usage.py
examples/prompts/configs/: trading_agent.yaml
examples/prompts/templates/common/: json_schema.jinja2  risk_management.jinja2
examples/prompts/templates/system/: v1.jinja2  v2.jinja2
examples/prompts/templates/user/: v1.jinja2  v2.jinja2
src/prompt_manager/: __init__.py  cache.py  config.py  exceptions.py  manager.py  template.py
tests/: test_manager.py
